# MachineLearning

./: MeetingTimer.py  README.md
.claude/: settings.json  settings.local.json
.ipynb_checkpoints/: PrecisionRecallTrandeOff-checkpoint.ipynb
3D/: .gitignore  3DObjectDisplay01.py  Convert-2d-to-3d-example01.py  README.md  requirements.txt
3DWebVIewer/: .gitignore  README.md  package-lock.json  package.json  server.js
ANPR/: NumberPlateRecognition01.py  NumberPlateRecognition02.py  NumberPlateRecognition03.py
Autoencoder/: SimpleAutoencoder01.ipynb  SimpleAutoencoder02.ipynb  SimpleAutoencoder03.ipynb
CameraApp/: .gitignore  ARM64_BUILD_GUIDE.md  README.md  STATIC_BUILD_GUIDE.md  run.sh  run_webcam.sh
CameraApp/Source/: .gitignore  BUILD_SYSTEM.md  CMakeLists.txt  DEPENDENCIES_QUICK_REFERENCE.md  LIBRARY_ANALYSIS.md  LIBRARY_SUMMARY.md  SYSTEM_DEPENDENCIES.md  build_opencv.sh  build_static.sh  build_webcam.sh  convert_yolo.sh  convert_yolo_to_onnx.py  install_dependencies.sh  install_onnxruntime.sh  run_camera.sh  run_standalone.sh  run_static.sh
CameraApp/Source/include/: webcam.h
CameraApp/Source/src/: main.cpp  webcam.cpp
Chapter01/: GDPperCapitaHappiness.py
Chapter03/: Dataset02.py  Dataset03.py  Dataset04.py  Dataset06.py  Dataset07.py  Dataset08.py  Dataset15.py  PrecisionRecallTrandeOff.ipynb
Chapter10/: Keras-ClassificationMNIST.py  NeuralNetwork-Classification01.ipynb
Deblurring/: .gitignore  DeblurringExample01.py  DeblurringExample02.py  DeblurringExample03.py  DeblurringExample04.py
DeepLearning/: LinearRegression01.ipynb  LogisticRegression01.ipynb  example02.py  example03.py  example04.py  example06.py  example07.py  example08.py  sentiment01.py
Diffusion/: Diffusion01.py  Diffusion02.py  Diffusion03.py
EasyOCR/: EasyOCRPDFExample01.py  EasyOCRPDFExample02.py  EasyOCRPDFExample03.py  EasyOCRwithGradioGUIExample01.py  EasyOCRwithGradioGUIExample02.py  EasyOCRwithGradioGUIExample03.py  EasyOCRwithGradioGUIExample04.py  YoloEasyOCRExample01.py  YoloEasyOCRExample02.py  easyOCR.py
Ernie/: Ernie-Example01.py  Ernie-Example02.py  Flux.1-Dev-Text-to-Image-Example64.py
FaceDetection/: .gitignore  FaceDetectionExample01.py  FaceDetectionWebcamExample01.py  FaceDetectionWebcamExample02.py  FaceDetectionWebcamExample03.py  FaceDetectionWebcamExample04.py  FaceRecognizerExample01.py  README.md  YoloFaceDetectionExample01.py  YoloFaceDetectionExample02.py  YoloFaceDetectionExample03.py  YoloFaceDetectionExample04.py  YoloFaceDetectionExample05.py  YoloFaceDetectionExample06.py  YoloVideoObjectDetection01.py  YoloVideoObjectDetection02.py  YoloVideoObjectDetection03.py  YoloVideoObjectDetection04.py  YoloVideoObjectDetection05.py  face_auth_gradio.py  requirements.txt
FaceImage/: .gitignore  ImageGeneration01.py  ImageGeneration02.py  check_duplicates.py
FaceRecognition/: FaceRecognitionExample01.py  FaceRecognitionExample02.py  FaceTrainerExample01.py
Fashion/: .gitignore  3DImageConversionExample01.py  3DImageViewExample02.py  3DImageViewExample03.py  3DImageViewExample04.py  3DImageViewExample05.py  BackgroundRemovalExample01.py  BackgroundRemovalExample02.py  DeblurringExample01.py  DeblurringExample02.py  DeblurringExample03.py  DeblurringExample04.py  DeblurringExample05.py  FashionDesignGANTrainingExample01.py  FashionDesignGANTrainingExample02.py  FashionDesignStableDiffusionExample01.py  FluxCPUExample01.py  FluxExample01.py  GFPGANFaceExample01.py  ImageEnhancerExample01.py  KandinskyExample02.py  KandiskyExample01.py  StableDiffusionFashionDesign01.py  StyleGAN2Example01.py  StyleGAN2Example02.py  StyleTransferExample01.py
Flux.1-Flux.2/: Flux.1-Dev-Gradio-Text-to-Image-Example36.py  Flux.1-Dev-Gradio-Text-to-Image-Example37.py  Flux.1-Dev-Gradio-Text-to-Image-Example38.py  Flux.1-Dev-Gradio-Text-to-Image-Example39.py  Flux.1-Dev-Gradio-Text-to-Image-Example40.py  Flux.1-Dev-Gradio-Text-to-Image-Example41.py  Flux.1-Dev-Gradio-Text-to-Image-Example43.py  Flux.1-Dev-Gradio-Text-to-Image-Example44.py  Flux.1-Dev-Gradio-Text-to-Image-Example45.py  Flux.1-Dev-Gradio-Text-to-Image-Example46.py  Flux.1-Dev-Gradio-Text-to-Image-Example47.py  Flux.1-Dev-Gradio-Text-to-Image-Example49.py  Flux.1-Dev-Gradio-Text-to-Image-Example50.py  Flux.1-Dev-Gradio-Text-to-Image-Example51.py  Flux.1-Dev-Gradio-Text-to-Image-Example52.py  Flux.1-Dev-Gradio-Text-to-Image-Example53.py  Flux.1-Dev-Gradio-Text-to-Image-Example54.py  Flux.1-Dev-Gradio-Text-to-Image-Example55.py  Flux.1-Dev-Gradio-Text-to-Image-Example56-R01.py  Flux.1-Dev-Gradio-Text-to-Image-Example56.py  Flux.1-Dev-Gradio-Text-to-Image-Example57.py  Flux.1-Dev-Gradio-Text-to-Image-Example59.py  Flux.1-Dev-Gradio-Text-to-Image-Example60.py  Flux.1-Kontext-Image-to-Image-Example12-Gradio-ALL.py  Flux.2-Dev-Klein-9B-Image-to-Image-Gradio-Example09-ALL.py  RealESRGANExample12.py
Flux1-01/: Flux.1-Dev-Text-to-Image-Example09.py  Flux.1-Dev-Text-to-Image-Example10.py  Flux.1-Dev-Text-to-Image-Example15.py  Flux.1-Dev-Text-to-Image-Example16.py  Flux.1-Dev-Text-to-Image-Example22.py  Flux.1-Dev-Text-to-Image-Example23.py  Flux.1-Dev-Text-to-Image-Example25.py  Flux.1-Dev-Text-to-Image-Example29.py  Flux.1-Dev-Text-to-Image-Example30.py  Flux.1-Dev-Text-to-Image-Example31.py  Flux.1-Dev-Text-to-Image-Example36.py  Flux.1-Dev-Text-to-Image-Example37.py  Flux.1-Dev-Text-to-Image-Example41.py  (+24 more)
ImageUpscaler1.0GTK/: .gitignore  CMakeLists.txt  Makefile  setup.sh  upscaler
ImageUpscaler1.0GTK/src/: main.cpp  onnx_sr.cpp  onnx_sr.hpp
OpenCV/: .gitignore  CMakeLists.txt  ImageCaptureExample01.py  ImageCaptureExample02.py  OpenCVFaceDetectionExample01.cpp  README_cpp_upscaling.md  README_gradio_gui.md  README_upscaling.md  build_and_run.bat  gradio_upscale_gui.py  image_upscaling_4x.py  quick_upscale_4x.py  requirements.txt  simple_gradio_gui.py  simple_upscale_4x.cpp  simple_upscale_4x.py  upscale_4x.cpp
QT/Calculator_CPP/: CMakeLists.txt  README.md  build.bat  build_mingw.bat  calculator.cpp  calculator.h  main.cpp
Tesseract/Example02/: CMakeLists.txt  opencv-tesseract-ocr-example02.cpp
(+1670 files in other folders)
